# myshell

./: .gitignore  LICENSE  README.md
labs/lab1/: Makefile  README.md  intro.html  rot  rot-error2.c  rot-warning.c  rot.c  rot.h
labs/lab2/: README.md  _viminfo  ast  ast.c  ast2.c  ast3  ast3.c  ast4.c  ast5.c  b  b.c  cir  cir.c  cx  cx.c  dv  dv.c  f_int  f_int.c  first_day_of_month.c  leapYear  leapYear.c  mycal  mycal.c  ord_n.c  pNot  pNot.c  report  report.c  square.c
labs/lab3/: README.md  l  lab3.c  p  pro.c  str
labs/lab4/: README.md  l  l4.c
labs/lab5/: README.md  s  strcat.c  strchr.c  strcmp.c  strncmp.c
labs/lab6/: README.md  b  b.c
labs/wifistats/: README.md  sample-packets.txt
labs/wifistats/drafts/: forklect.c  no_working_reedit.c  t.c  working_pipes_cases.c  working_record_sum_wifi.c
labs/wifistats/drafts/v1/: pipetest.c  testpipe.c
myshell/: .gitignore  CMakeLists.txt  Makefile  README.md  background.c  background.h  external.c  external.h  filepaths.c  filepaths.h  functions.c  globals.c  globals.h  hashset.c  internal.c  iterator.c  myshell  myshell.c  myshell.h  parser.c  parser.h  pipeline.c  pipeline.h  redirection.c  searchpath.c  searchpath.h  set.c  set.h  shellscript.c  shellscript.h  simplemap.c  subshell.c
myshell/include/: background.h  hashset.h  internal.h  iterator.h  myshell.h  redirection.h  set.h  simplemap.h  subshell.h
project1-analysing-data/: README.md  s.txt  sample-output-A.txt  sample-output-C.txt  w  wifistats-sample  wifistats-sample.c  wifistats.c
project1-analysing-data/drafts/: e  execltest.c  f  input-output-error.c  requirement_1_complete.c  working_execv.c  working_execv_with_fork.c  working_file_pipe_execv.c  working_fork.c  working_pipe_to_child.c  working_pipe_to_parent.c  working_read.c
project1-analysing-data/drafts/v1/: recur.c  testprint.c
project2-myshell/: Makefile  README.md  execute.c  functions.c  globals.c  haha  myshell  myshell.c  myshell.h  parser.c  readme.txt  summary step 9.txt  temp.c  test.c  test4.c  test6.c  test7.c  test8.c
wifistats/: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  hashmap.c  hashmap.h  iterator.c  iterator.h  pair.h  sample-OUIfile-large.txt  sample-OUIfile-small.txt  sample-output-B.txt  sample-output-D.txt  wifistats  wifistats.c
wifistats/drafts/: test.c
wifistats/drafts/v1/: execltest.c  fork2.c  forklect.c
